--- a/views/sign/signup.html
+++ b/views/sign/signup.html
@@ -33,12 +33,21 @@
           </div>
         </div>
         <div class='control-group'>
+          <label class='control-label' for='email'>邮箱</label>
+
+          <div class='controls'>
+            <input class='input-xlarge' id='email' name='email' size='30' type="text"/>
+          </div>
+        </div>
+
+         <div class='control-group'>
           <label class='control-label' for='pass'>密码</label>
 
           <div class='controls'>
             <input class='input-xlarge' id='pass' name='pass' size='30' type='password'/>
           </div>
         </div>
+
         <div class='control-group'>
           <label class='control-label' for='re_pass'>确认密码</label>
 
